LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_image_handle_get_depth_image_handle(const struct heif_image_handle *handle, heif_item_id depth_image_id, struct heif_image_handle **out_depth_handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_depth_image_handle$handle() {
        return heif_image_handle_get_depth_image_handle.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_image_handle_get_depth_image_handle(const struct heif_image_handle *handle, heif_item_id depth_image_id, struct heif_image_handle **out_depth_handle)
     * }
     */
    public static MemorySegment heif_image_handle_get_depth_image_handle(SegmentAllocator allocator, MemorySegment handle, int depth_image_id, MemorySegment out_depth_handle) {
        var mh$ = heif_image_handle_get_depth_image_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_depth_image_handle", allocator, handle, depth_image_id, out_depth_handle);
            }
            return (MemorySegment)mh$.invokeExact(allocator, handle, depth_image_id, out_depth_handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int heif_depth_representation_type_uniform_inverse_Z = (int)0L;
    /**
     * {@snippet lang=c :
     * enum heif_depth_representation_type.heif_depth_representation_type_uniform_inverse_Z = 0
     * }
     */
    public static int heif_depth_representation_type_uniform_inverse_Z() {
        return heif_depth_representation_type_uniform_inverse_Z;
    }
    private static final int heif_depth_representation_type_uniform_disparity = (int)1L;
    /**
     * {@snippet lang=c :
     * enum heif_depth_representation_type.heif_depth_representation_type_uniform_disparity = 1
     * }
     */
    public static int heif_depth_representation_type_uniform_disparity() {
        return heif_depth_representation_type_uniform_disparity;
    }
    private static final int heif_depth_representation_type_uniform_Z = (int)2L;
    /**
     * {@snippet lang=c :
     * enum heif_depth_representation_type.heif_depth_representation_type_uniform_Z = 2
     * }
     */
    public static int heif_depth_representation_type_uniform_Z() {
        return heif_depth_representation_type_uniform_Z;
    }
    private static final int heif_depth_representation_type_nonuniform_disparity = (int)3L;
    /**
     * {@snippet lang=c :
     * enum heif_depth_representation_type.heif_depth_representation_type_nonuniform_disparity = 3
     * }
     */
    public static int heif_depth_representation_type_nonuniform_disparity() {
        return heif_depth_representation_type_nonuniform_disparity;
    }

    private static class heif_depth_representation_info_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_depth_representation_info_free"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_depth_representation_info_free(const struct heif_depth_representation_info *info)
     * }
     */
    public static FunctionDescriptor heif_depth_representation_info_free$descriptor() {
        return heif_depth_representation_info_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_depth_representation_info_free(const struct heif_depth_representation_info *info)
     * }
     */
    public static MethodHandle heif_depth_representation_info_free$handle() {
        return heif_depth_representation_info_free.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_depth_representation_info_free(const struct heif_depth_representation_info *info)
     * }
     */
    public static void heif_depth_representation_info_free(MemorySegment info) {
        var mh$ = heif_depth_representation_info_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_depth_representation_info_free", info);
            }
            mh$.invokeExact(info);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_depth_image_representation_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_depth_image_representation_info"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_depth_image_representation_info(const struct heif_image_handle *handle, heif_item_id depth_image_id, const struct heif_depth_representation_info **out)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_depth_image_representation_info$descriptor() {
        return heif_image_handle_get_depth_image_representation_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_depth_image_representation_info(const struct heif_image_handle *handle, heif_item_id depth_image_id, const struct heif_depth_representation_info **out)
     * }
     */
    public static MethodHandle heif_image_handle_get_depth_image_representation_info$handle() {
        return heif_image_handle_get_depth_image_representation_info.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_depth_image_representation_info(const struct heif_image_handle *handle, heif_item_id depth_image_id, const struct heif_depth_representation_info **out)
     * }
     */
    public static int heif_image_handle_get_depth_image_representation_info(MemorySegment handle, int depth_image_id, MemorySegment out) {
        var mh$ = heif_image_handle_get_depth_image_representation_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_depth_image_representation_info", handle, depth_image_id, out);
            }
            return (int)mh$.invokeExact(handle, depth_image_id, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_number_of_thumbnails {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_number_of_thumbnails"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_thumbnails(const struct heif_image_handle *handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_number_of_thumbnails$descriptor() {
        return heif_image_handle_get_number_of_thumbnails.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_thumbnails(const struct heif_image_handle *handle)
     * }
     */
    public static MethodHandle heif_image_handle_get_number_of_thumbnails$handle() {
        return heif_image_handle_get_number_of_thumbnails.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_number_of_thumbnails(const struct heif_image_handle *handle)
     * }
     */
    public static int heif_image_handle_get_number_of_thumbnails(MemorySegment handle) {
        var mh$ = heif_image_handle_get_number_of_thumbnails.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_number_of_thumbnails", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_list_of_thumbnail_IDs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_list_of_thumbnail_IDs"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_thumbnail_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_list_of_thumbnail_IDs$descriptor() {
        return heif_image_handle_get_list_of_thumbnail_IDs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_thumbnail_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static MethodHandle heif_image_handle_get_list_of_thumbnail_IDs$handle() {
        return heif_image_handle_get_list_of_thumbnail_IDs.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_image_handle_get_list_of_thumbnail_IDs(const struct heif_image_handle *handle, heif_item_id *ids, int count)
     * }
     */
    public static int heif_image_handle_get_list_of_thumbnail_IDs(MemorySegment handle, MemorySegment ids, int count) {
        var mh$ = heif_image_handle_get_list_of_thumbnail_IDs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_image_handle_get_list_of_thumbnail_IDs", handle, ids, count);
            }
            return (int)mh$.invokeExact(handle, ids, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_get_thumbnail {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_get_thumbnail"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_image_handle_get_thumbnail(const struct heif_image_handle *main_image_handle, heif_item_id thumbnail_id, struct heif_image_handle **out_thumbnail_handle)
     * }
     */
    public static FunctionDescriptor heif_image_handle_get_thumbnail$descriptor() {
        return heif_image_handle_get_thumbnail.DESC;
    }
